adiçao de paragrafo

--- a/Exercicos/ex001/index.html
+++ b/Exercicos/ex001/index.html
@@ -8,6 +8,7 @@
 <body>
 <h1>olá, Mundo</h1>
 <hr>
-<p>Esse é o meu primeiro documento HTML. Estou muito feliz!</p>   
+<p>Esse é o meu primeiro documento HTML. Estou muito feliz!</p>
+<p> Início da Caminhada</p>   
 </body>
 </html>
