--- a/exercicos/ex022/fundo01.html
+++ b/exercicos/ex022/fundo01.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Teste de Imagens de Fundo</title>
     <style>
+        body {
+            background-image: url('imagens/wallpaper002.jpg');
+            color: lightsalmon;
+        }
         div.quadrado {
             display: inline-block;
             border: 1px solid black;
             border-radius: 10px;
-            height: 300px;
-            width: 300px;
+            height: 200px;
+            width: 200px;
             background-color: red;
 
         }
@@ -25,6 +29,7 @@
         div#q3 {
             background-image: url('imagens/pattern004.png');
         }
+
     </style>
 </head>
 <body>
