--- a/desafios/modulo02/desafio011/index.html
+++ b/desafios/modulo02/desafio011/index.html
@@ -5,20 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio do astronauta</title>
     <style>
-        #conteiner { 
+        #container {
             background-color: black;
-            background-image: url(imagens/astronauta.png);
-            background-size: ;
-            height: ;
+            background-image: url(imagens/espaco.jpg);
+            height: 97vh;
+            background-size: 100% 100%;
         }
-
         #conteudo {
             background-image: url(imagens/astronauta.png);
-        }
+            background-size: 100px 100px;
+            height: 400px;
+            width: 400px;
+            background-repeat: no-repeat;
+         }
     </style>
 </head>
 <body>
-    <section id="conteiner">
+    <section id="container">
         <article id="conteudo">
 
         </article>
