--- a/desafios/modulo02/desafio011/index.html
+++ b/desafios/modulo02/desafio011/index.html
@@ -10,13 +10,18 @@
             background-image: url(imagens/espaco.jpg);
             height: 97vh;
             background-size: 100% 100%;
+            position: relative;
         }
         #conteudo {
             background-image: url(imagens/astronauta.png);
-            background-size: 100px 100px;
-            height: 400px;
-            width: 400px;
+            background-size: 100% 100%;
+            height: 300px;
+            width: 300px;
             background-repeat: no-repeat;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
          }
     </style>
 </head>
