--- a/exercicos/ex023/tabela002.html
+++ b/exercicos/ex023/tabela002.html
@@ -3,8 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas</title>~
-    
+    <title>Tabelas</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        table {
+            border-collapse: collapse;
+        }
+
+        th {
+            border: 1px solid black;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
+        td {
+            border: 1px solid black;
+            padding: 10px;
+            text-align: center;
+        }
+      
+    </style>
 </head>
 <body>
     <h1>Uso de Tabelas Grandes</h1>
@@ -33,6 +54,24 @@
                 <td>3</td>
                 <td>Rio de Janeiro</td>
                 <td>16 054 524</td>
+                <td>7,91%</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Bahia</td>
+                <td>14 141 626</td>
+                <td>6,96%</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Paraná</td>
+                <td>11 444 380</td>
+                <td>5,64%</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td></td>
+                <td></td>
                 <td></td>
             </tr>
         </tbody>
