--- a/exercicos/ex023/tabela002.html
+++ b/exercicos/ex023/tabela002.html
@@ -11,12 +11,22 @@
 
         table {
             border-collapse: collapse;
+            width: 700px;
+        }
+
+        caption {
+            font-size: 1.6em;
+            font-weight: bold;
+            padding: 5px;
+            background-color: lightgray;
+
         }
 
         th {
+            color: white;
             border: 1px solid black;
             padding: 10px;
-            background-color: lightgray;
+            background-color: gray;
         }
 
         td {
@@ -24,12 +34,20 @@
             padding: 10px;
             text-align: center;
         }
+
+        td.num {
+            text-align: right;
+        }
+        tfoot > tr > td {
+            background-color: rgba(0, 128, 0, 0.75);
+        }
       
     </style>
 </head>
 <body>
     <h1>Uso de Tabelas Grandes</h1>
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <th>Posição</th>
             <th>Estado</th>
@@ -41,42 +59,69 @@
             <tr>
                 <td>1</td>
                 <td>São Paulo</td>
-                <td>44 411 238</td>
+                <td class="num">44.411.238</td>
                 <td>21,88%</td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>Minas Gerais</td>
-                <td>20 538 718</td>
+                <td class="num">20.538.718</td>
                 <td>10,11%</td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Rio de Janeiro</td>
-                <td>16 054 524</td>
+                <td class="num">16.054.524</td>
                 <td>7,91%</td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>Bahia</td>
-                <td>14 141 626</td>
+                <td class="num">14.141.626</td>
                 <td>6,96%</td>
             </tr>
             <tr>
                 <td>5</td>
                 <td>Paraná</td>
-                <td>11 444 380</td>
+                <td class="num">11.444.380</td>
                 <td>5,64%</td>
             </tr>
             <tr>
                 <td>6</td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>Rio Grande do Sul</td>
+                <td class="num">10.882.965</td>
+                <td>5,36%</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td> Pernambuco</td>
+                <td class="num">9.058.931</td>
+                <td>4,46%</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>Ceará</td>
+                <td class="num">8.794.957</td>
+                <td>4,33%</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>Pará</td>
+                <td class="num">8.121.025</td>
+                <td>4,1%</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>Santa Catarina</td>
+                <td class="num">7.610.361</td>
+                <td>3,75%</td>
             </tr>
         </tbody>
         <tfoot>
-
+            <tr>
+                <th>Total de Habitantes</th>
+                <td class="num"><strong>150.996.725</strong></td>
+            </tr>
         </tfoot>
     </table>
 </body>
